--- a/pokedex.html
+++ b/pokedex.html
@@ -12,7 +12,7 @@
 
     <div id = "content-box">
         <!--left side, displays pokemon information-->
-        <div id = "pokemon info">
+        <div id = "pokemon-info">
             <img id = "pokemon-img">
             <div id = "pokemon-types">
                 <span class = "type-box grass">GRASS</span><span class = "type-box poison">POISON</span>
